# Atelier_Carte_Puce

./: .gitignore  README.md  code.txt  config.yaml  diff_main.txt  get_code.py  requirements.txt
data/: app.db
scripts/: build_vision.sh  change_pin.py  demo_run.py  enroll_user.py  init_db.py  probe_access.py  recover_pin.py  security_demo.py  test_camera.py  test_card.py  test_vision.py
src/: auth_flow.py  bio.py  camera.py  card.py  config.py  db.py  security.py  vision_backend.py
src/security/: __init__.py  audit_logging.py  hmac_challenge_response.py  password_hashing.py  replay_protection.py  template_integrity.py
vision/: CMakeLists.txt
vision/src/: ght_face_eyes.cpp
